# cuda-learn

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  hello.cu
.cache/clangd/index/: common.h.482272F1A3916A5D.idx  reduce-integer.cu.F5468DE47BE83492.idx  saxpy.c.289254CECE828DD4.idx  saxpy_cuda.cu.884C41EBFE81ADBF.idx  vector_multi.cu.EE34B49375B8F4AC.idx
cuda-pro-c/: CMakeLists.txt
cuda-pro-c/03/: nested-hello-excersice.cu  nested-reduce.cu  reduce-integer.cu
cuda-pro-c/03/include/: common.h
python/: 1.py
saxpy/: CMakeLists.txt
snipts/: CMakeLists.txt
src/: hello-test.cu  hello.cu  matrix_muti.cu  vector_multi.cu
src/saxpy/: saxpu.c  saxpy.c  saxpy_cuda.cu
